k8s/ingress/emart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emart-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: joedevopslab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 5000

          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 5000

          - path: /webapi/
            pathType: Prefix
            backend:
              service:
                name: java-api
                port:
                  number: 9000
